[package]
name = "tor"
version = "0.1.0"
edition = "2018"

[dependencies]
tari_shutdown = "0.8.1"

ctrlc = "3.2.1"
futures = "0.3.18"
libtor = { version = "46.9.0" }
libtor-sys = {"46.9.1+0.4.6.9", features = ["vendored-openssl,vendored-lzma,vendored-zstd"] }
reqwest = { version = "0.11.6", features = ["socks"] }
tokio = { version = "1.14", features = ["full"] }
